--- a/telco_customer_churn_prediction.ipynb
+++ b/telco_customer_churn_prediction.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pranavb200/Telco-Customer-Churn-Prediction/blob/main/telco_customer_churn_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -9,7 +19,7 @@
       "outputs": [],
       "source": [
         "from google.colab import files\n",
-        "uploaded = files.upload()\n"
+        "uploaded = files.upload()"
       ]
     },
     {
@@ -1741,7 +1751,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOv5bDYFc7z65AqJyXisGHo",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
